// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CommandMenuItem creation should fail when creating with both workflowVersionId and frontComponentId 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "subCode": "WORKFLOW_OR_FRONT_COMPONENT_REQUIRED",
    "userFriendlyMessage": "Either workflow version or front component is required.",
  },
  "message": "Exactly one of workflowVersionId or frontComponentId is required",
  "name": "UserInputError",
}
`;

exports[`CommandMenuItem creation should fail when creating with empty label 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "commandMenuItem": [
        {
          "errors": [
            {
              "code": "INVALID_COMMAND_MENU_ITEM_INPUT",
              "message": "Label is required",
              "userFriendlyMessage": "Label is required",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "commandMenuItem",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 commandMenuItem",
    "summary": {
      "commandMenuItem": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating command menu item",
  "name": "GraphQLError",
}
`;

exports[`CommandMenuItem creation should fail when creating with empty workflowVersionId 1`] = `
{
  "extensions": {
    "code": "GRAPHQL_VALIDATION_FAILED",
    "http": {
      "status": 400,
    },
    "userFriendlyMessage": "An error occurred.",
    "value": "",
  },
  "message": "Invalid UUID",
  "name": "ValidationError",
}
`;

exports[`CommandMenuItem creation should fail when creating with invalid workflowVersionId (not a UUID) 1`] = `
{
  "extensions": {
    "code": "GRAPHQL_VALIDATION_FAILED",
    "http": {
      "status": 400,
    },
    "userFriendlyMessage": "An error occurred.",
    "value": "not-a-valid-uuid",
  },
  "message": "Invalid UUID",
  "name": "ValidationError",
}
`;

exports[`CommandMenuItem creation should fail when creating with missing label 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "http": {
      "status": 400,
    },
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "Field "label" of required type "String!" was not provided.",
  "name": "GraphQLError",
}
`;

exports[`CommandMenuItem creation should fail when creating with missing workflowVersionId 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "subCode": "WORKFLOW_OR_FRONT_COMPONENT_REQUIRED",
    "userFriendlyMessage": "Either workflow version or front component is required.",
  },
  "message": "Exactly one of workflowVersionId or frontComponentId is required",
  "name": "UserInputError",
}
`;
